--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Events#new</h1>
-<p>Find me in app/views/events/new.html.erb</p>
+<div class="container">
+  <h4 class="display-4" align="center" style="padding-top: 10Ppx; color:black;  padding-bottom: 10px;">CREATE A NEW
+    EVENT</h4>
+
+  <%= render partial:'form', locals: {event: @event} %>
+
+</div>
